output csv files to a folder called data

--- a/osha-establishment-search.ipynb
+++ b/osha-establishment-search.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ac164153",
+   "id": "1c7f010d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "888180e1",
+   "id": "f4062695",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ddb8984b",
+   "id": "5e56a930",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae5cd25e",
+   "id": "efac8b7c",
    "metadata": {},
    "source": [
     "# Scrape individual activity pages"
@@ -1246,7 +1246,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f0089aa2",
+   "id": "b44d20fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,35 +1259,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1395222f",
+   "execution_count": 15,
+   "id": "3805a02c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "violation_summary_df.to_csv('violation_summary_df.csv', index=False)\n",
-    "violation_items_df.to_csv('violation_items_df.csv', index=False)\n",
-    "related_activity_df.to_csv('related_activity_df.csv', index=False)\n",
-    "investigated_inspections_df.to_csv('investigated_inspections_df.csv', index=False)\n",
-    "details_df.to_csv('details_df.csv', index=False)"
+    "!mkdir data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1c728b92",
+   "execution_count": 16,
+   "id": "760a30b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!open ."
+    "violation_summary_df.to_csv('data/violation_summary_df.csv', index=False)\n",
+    "violation_items_df.to_csv('data/violation_items_df.csv', index=False)\n",
+    "related_activity_df.to_csv('data/related_activity_df.csv', index=False)\n",
+    "investigated_inspections_df.to_csv('data/investigated_inspections_df.csv', index=False)\n",
+    "details_df.to_csv('data/details_df.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "383a1f6f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
