--- a/osha-establishment-search.ipynb
+++ b/osha-establishment-search.ipynb
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "64087cbd",
    "metadata": {},
    "outputs": [
@@ -1022,7 +1022,155 @@
       "409 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1183553.015\n",
       "ERROR - related activity table wasn't scraped\n",
       "410 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1182639.015\n",
-      "411 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1182398.015\n"
+      "411 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1182398.015\n",
+      "412 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1184367.015\n",
+      "413 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1176237.015\n",
+      "414 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1175394.015\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "415 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1176407.015\n",
+      "416 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1170707.015\n",
+      "417 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1170565.015\n",
+      "418 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1168406.015\n",
+      "419 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1166383.015\n",
+      "420 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1164546.015\n",
+      "421 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1163850.015\n",
+      "422 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1158485.015\n",
+      "423 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1152593.015\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "424 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1152940.015\n",
+      "425 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1147303.015\n",
+      "426 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1146269.015\n",
+      "427 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1144423.015\n",
+      "428 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1143713.015\n",
+      "429 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1139232.015\n",
+      "430 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1135605.015\n",
+      "431 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1139569.015\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "432 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1131904.015\n",
+      "433 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1129980.015\n",
+      "434 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1132438.015\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "435 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1143102.015\n",
+      "436 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1116040.015\n",
+      "437 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1118185.015\n",
+      "438 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1112288.015\n",
+      "439 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1111010.015\n",
+      "440 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1110837.015\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "441 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1109167.015\n",
+      "442 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1107313.015\n",
+      "443 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1103908.015\n",
+      "444 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1114966.015\n",
+      "445 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1097611.015\n",
+      "446 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1084718.015\n",
+      "447 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1082100.015\n",
+      "448 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1077076.015\n",
+      "449 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1070970.015\n",
+      "450 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1070357.015\n",
+      "451 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1068869.015\n",
+      "452 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1079686.015\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "453 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1065780.015\n",
+      "454 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1066179.015\n",
+      "455 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1060953.015\n",
+      "456 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1059353.015\n",
+      "457 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1059472.015\n",
+      "458 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317979870.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "459 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1055319.015\n",
+      "460 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1062522.015\n",
+      "461 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1047453.015\n",
+      "462 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1044065.015\n",
+      "463 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1019223.015\n",
+      "464 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1017821.015\n",
+      "465 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1015396.015\n",
+      "466 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317617447.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "467 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317941177.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "468 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1012127.015\n",
+      "469 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1015177.015\n",
+      "470 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1009303.015\n",
+      "471 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1008888.015\n",
+      "472 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1053780.015\n",
+      "473 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1009454.015\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "474 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317940203.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "475 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1006796.015\n",
+      "476 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=1005259.015\n",
+      "477 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317459295.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "478 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317704070.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "479 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317809044.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "480 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=993458.015\n",
+      "481 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=992045.015\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "482 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=992095.015\n",
+      "483 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317784635.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "484 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317627727.0\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "ERROR - couldn't scrape case status\n",
+      "485 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=983776.015\n",
+      "486 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317250777.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "487 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=967705.015\n",
+      "488 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317625127.0\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "ERROR - couldn't scrape case status\n",
+      "489 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=966521.015\n",
+      "490 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=958230.015\n",
+      "491 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316647635.0\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "ERROR - couldn't scrape case status\n",
+      "492 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316961283.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "493 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=954526.015\n",
+      "494 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316214584.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "495 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316798263.0\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "ERROR - couldn't scrape case status\n",
+      "496 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=951864.015\n",
+      "497 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317408391.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "498 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=951336.015\n",
+      "499 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316214436.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "500 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317275253.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "501 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=943537.015\n",
+      "502 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317293298.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "503 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316700822.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "504 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317072528.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "505 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=317071488.0\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "ERROR - couldn't scrape case status\n",
+      "506 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=920433.015\n",
+      "507 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316785039.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "508 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316640309.0\n",
+      "ERROR - related activity table wasn't scraped\n",
+      "ERROR - couldn't scrape case status\n",
+      "509 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316212414.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "510 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316803030.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "511 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316698000.0\n",
+      "ERROR - couldn't scrape case status\n",
+      "512 of 513 - scraping https://www.osha.gov/ords/imis/establishment.inspection_detail?id=316867423.0\n",
+      "ERROR - couldn't scrape case status\n"
      ]
     }
    ],
@@ -1074,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b44d20fe",
    "metadata": {},
    "outputs": [],
@@ -1088,17 +1236,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3805a02c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: data: File exists\r\n"
+     ]
+    }
+   ],
    "source": [
     "!mkdir data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "760a30b1",
    "metadata": {},
    "outputs": [],
