--- a/osha-establishment-search.ipynb
+++ b/osha-establishment-search.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "5e56a930",
    "metadata": {},
    "outputs": [
@@ -359,7 +359,7 @@
        "[513 rows x 13 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +391,7 @@
     "    \n",
     "# combine the queries\n",
     "activities_df = pd.concat(activities_df)\n",
-    "activities_df.to_csv('activities_df.csv', index=False)\n",
+    "activities_df.to_csv('data/activities_df.csv', index=False)\n",
     "activities_df"
    ]
   },
